# kvkbd

./: .gitmodules  CMakeLists.txt  README.md
doc/: index.docbook
src/: CMakeLists.txt  dragwidget.cpp  dragwidget.h  kbddock.cpp  kbddock.h  kbdtray.cpp  kbdtray.h  kvkbdapp.cpp  kvkbdapp.h  main.cpp  mainwidget.cpp  mainwidget.h  resizabledragwidget.cpp  resizabledragwidget.h  resources.qrc  themeloader.cpp  themeloader.h  vbutton.cpp  vbutton.h  vkeyboard.cpp  vkeyboard.h  x11keyboard.cpp  x11keyboard.h
src/colors/: CMakeLists.txt  dark.css  legacy.css  light.css  simple.css  standard.css
src/themes/: CMakeLists.txt  standard.xml  standart.xml
